# GFEM_acoustic

./: CITATION.cff
Homogeneous/GFEM_homogeneous/: CMakeLists.txt  h_mesh_scale.msh  input_gfem_homogeneous.prm
Homogeneous/GFEM_homogeneous/include/: Functions_GFEM.h  Mesh_model.h  Param_handler.h
Homogeneous/GFEM_homogeneous/source/: Functions_GFEM.cc  Main_GFEM_homogeneous.cc  Mesh_model.cc  Param_handler.cc
Homogeneous/SEM_homogeneous/: CMakeLists.txt  input_sem_homogeneous.prm
Homogeneous/SEM_homogeneous/include/: Param_handler.h
Homogeneous/SEM_homogeneous/source/: Functions_SEM.cc  Main_SEM_homogeneous.cc  Param_handler.cc
LowVelocity/GFEM_LowVelocity/: CMakeLists.txt  input_gfem_LowVelocity.prm  scat_meshr_neg.msh  scat_neg_mr3.msh  scat_neg_mr4.msh
LowVelocity/GFEM_LowVelocity/source/: Main_GFEM_LowVelocity.cc  Mesh_model.cc  Param_handler.cc
LowVelocity/SEM_LowVelocity/: CMakeLists.txt  input_sem_LowVelocity.prm  scat_neg_mr5.msh
LowVelocity/SEM_LowVelocity/source/: Main_SEM_LowVelocity.cc  Param_handler.cc
Topography/GFEM_topography/: CMakeLists.txt  input_gfem_topography.prm  topo_mesh_neg_4h.msh  topo_mesh_neg_8h.msh  topo_meshr.msh  topo_meshr2_neg.msh  topo_meshr3_neg.msh  topo_meshr_neg.msh
Topography/GFEM_topography/include/: Functions_GFEM.h  Mesh_model.h  Param_handler.h
Topography/GFEM_topography/source/: Functions_GFEM.cc  Main_GFEM_topography.cc  Mesh_model.cc  Param_handler.cc
Topography/SEM_topography/: CMakeLists.txt  input_sem_topography.prm  topo_mesh_neg_4h.msh
Topography/SEM_topography/include/: Functions_SEM.h  (+2 more)
(+3 files in other folders)
